MMA-8223 Fiks IntelliJ-forslag